--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,15 @@
-<h1>New book</h1>
+<h1>Editing Book</h1>
 
-<%= form_with model: @list do |f| %>
+<%= form_with model: @book do |f| %>
   <p>本のタイトル</p>
   <%= f.text_field :title %>
 
   <p>感想</p>
   <%= f.text_area :body %>
 
-  <%= f.submit '投稿' %>
+  <%= f.submit '保存' %>
 <% end %>
+
+<%= link_to "Show", book_path(@book.id) %>
+
+<%= link_to "Back", "/books" %>
