--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New book</h1>
 
-<%= form_with model: @list do |f| %>
+<%= form_with model: @book do |f| %>
   <p>本のタイトル</p>
   <%= f.text_field :title %>
 
