--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,34 @@
-<% @books.each do |book| %>
-    <h3>本のタイトル<h3>
-    <span><%= book.title %></span>
+<h1>Books</h1>
 
-    <h3>感想</h3>
-    <span><%= book.body %></span>
+<table>
+    <thead>
+        <tr>
+            <th>本のタイトル</th>
+            <th>感想</th>
+        </tr>
+    </thead>
 
-    <span><%= link_to "Show", "/books/#{book.id}" %></span>
+    <tbody>
+        <% @books.each do |book| %>
+            <tr>
+                <td><%= book.title %></td>
+                <td><%= book.body %></td>
+                <td><%= link_to "Show", "/books/#{book.id}" %></td>
+                <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
+                <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+            </tr>
+        <% end %>
+    </tbody>
+</table>
 
-    <span><%= link_to "Edit", "/books/#{book.id}/edit" %></span>
+<h2>New book</h2>
 
-    <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+<%= form_with model: @book do |f| %>
+  <p>本のタイトル</p>
+  <%= f.text_field :title %>
+
+  <p>感想</p>
+  <%= f.text_area :body %>
+
+  <%= f.submit '投稿' %>
 <% end %>
