--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,14 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+    <%= @book.errors.count %> errors occurred.
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <p>本のタイトル</p>
   <%= f.text_field :title %>
