--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,17 @@
 
 <h2>New book</h2>
 
+<% if @book.errors.any? %>
+    <div class="error-message">
+        <%= @book.errors.count %> errors occurred.
+        <ul>
+            <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <p>本のタイトル</p>
   <%= f.text_field :title %>
