--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,7 +16,7 @@
   <p>感想</p>
   <%= f.text_area :body %>
 
-  <%= f.submit '保存' %>
+  <%= f.submit 'Update Book' %>
 <% end %>
 
 <%= link_to "Show", book_path(@book.id) %>
